tests/errors/construction/non-type-with-initializer.fn
---
Description: Initializer applied to a non-type identifier
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var x = 5
        var y = x { }
        return 0
    }
}
